--- a/D8.html
+++ b/D8.html
@@ -118,8 +118,8 @@
       */
 
       window.onload = function () {
-        //
-      };
+        alert("Hello World!")
+      }
 
       /* EXERCISE 13
       Use HTML5 tags to divide the content of the page in a more semantic way.
@@ -184,6 +184,6 @@
       document.onkeypress = function (e) {
         console.log(inputField.value)
       }
-      
+
   </script>
 </html>
